fix(homepage): Stretch homepage height

--- a/diyapp/src/app/components/adminpanel/adminpanel.component.scss
+++ b/diyapp/src/app/components/adminpanel/adminpanel.component.scss
@@ -1,10 +1,3 @@
-.adminpanel{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-evenly;
-    height: 100%;
-}
-
 .margine{
     margin:10px;
     padding: 10px;
