--- a/diyapp/src/app/components/homepage/homepage.component.scss
+++ b/diyapp/src/app/components/homepage/homepage.component.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: space-evenly;
-    height: 100%;
 }
 
 .margine {
@@ -23,10 +22,10 @@
 
 .list {
     width: 100%;
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-flow: column wrap;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-self: flex-start;
     padding: 5px;
     margin: 5px;
