--- a/diyapp/src/app/components/userpanel/userpanel.component.scss
+++ b/diyapp/src/app/components/userpanel/userpanel.component.scss
@@ -4,5 +4,4 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: space-evenly;
-    height: 100%;
 }
